사진빼고 구현완료
사진만...프로필만,.